# header-injection-rust-wasm

./: .bazelrc  .gitignore  BUILD  Cargo.toml  README.md  WORKSPACE  install_wasme_cli.sh  runtime-config.json
bazel/: dependencies.bzl  repositories.bzl  rules_rust.patch
bazel/cargo/: BUILD
bazel/cargo/remote/: BUILD.anyhow-1.0.71.bazel  BUILD.bazel  BUILD.form_urlencoded-1.2.0.bazel  BUILD.hashbrown-0.13.2.bazel  BUILD.idna-0.4.0.bazel  BUILD.itoa-1.0.6.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.percent-encoding-2.3.0.bazel  BUILD.proc-macro2-1.0.59.bazel  BUILD.proxy-wasm-0.2.1.bazel  BUILD.quote-1.0.28.bazel  BUILD.ryu-1.0.13.bazel  BUILD.serde-1.0.163.bazel  BUILD.serde_derive-1.0.163.bazel  BUILD.serde_json-1.0.96.bazel  BUILD.syn-2.0.18.bazel  BUILD.tinyvec-1.6.0.bazel  BUILD.tinyvec_macros-0.1.1.bazel  BUILD.unicode-bidi-0.3.13.bazel  BUILD.unicode-ident-1.0.9.bazel  BUILD.unicode-normalization-0.1.22.bazel  BUILD.url-2.4.0.bazel  crates.bzl  defs.bzl
src/: filter.rs
