[package]
name = "header_injection"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/filter.rs"

[dependencies]
proxy-wasm =  "0.2.1"
url = { version = "2.4.0", features = ["serde"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
lazy_static = "1.4.0"
log = "0.4.18"
anyhow = "1.0.71"